--- a/style.css
+++ b/style.css
@@ -4243,7 +4243,7 @@ button {
     .hero__car {
         width: 75% !important;
         max-width: 550px !important;
-        transform: translate(-50%, -50%) scale(1.3) !important;
+        transform: translate(-55G%, -50%) scale(1.3) !important;
     }
     
     @keyframes floatCar {
@@ -4313,7 +4313,8 @@ button {
     .hero__car {
         width: 85% !important;
         max-width: 450px !important;
-        transform: translate(-50%, -50%) scale(1.2) !important;
+        
+        transform: translate(-60%, -50%) scale(1.2) !important;
     }
     
     @keyframes floatCar {
