--- a/style.css
+++ b/style.css
@@ -4243,7 +4243,7 @@ button {
     .hero__car {
         width: 75% !important;
         max-width: 550px !important;
-        transform: translate(-55G%, -50%) scale(1.3) !important;
+        transform: translate(-60%, -50%) scale(1.3) !important;
     }
     
     @keyframes floatCar {
@@ -4314,7 +4314,7 @@ button {
         width: 85% !important;
         max-width: 450px !important;
         
-        transform: translate(-60%, -50%) scale(1.2) !important;
+        transform: translate(-60%, -50%) scale(1.3) !important;
     }
     
     @keyframes floatCar {
@@ -4325,7 +4325,9 @@ button {
             transform: translate(-50%, -50%) scale(1.2) translateY(-10px);
         }
     }
-    
+    .hero__badge{
+        order:2;
+    }
     /* Badge plus petit */
     .hero__badge-top {
         height: 70px;
@@ -4390,7 +4392,7 @@ button {
     
     /* Images encore plus compactes */
     .hero__images {
-        height: 320px !important;
+        height:250px !important;
         margin-bottom: 1rem;
     }
     
@@ -4398,7 +4400,7 @@ button {
     .hero__car {
         width: 90% !important;
         max-width: 350px !important;
-        transform: translate(-50%, -50%) scale(1.1) !important;
+        transform: translate(-60%, -50%) scale(1.3) !important;
     }
     
     @keyframes floatCar {
@@ -4435,7 +4437,7 @@ button {
     }
     
     .hero__badge {
-        font-size: 16px;
+        font-size: 20px;
         margin-bottom: 1.25rem;
     }
     
