--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@
     src:url("./font/TT\ Commons\ Regular.otf")
     format("opentype");
 }
+@font-face{
+    font-family: avefedan;
+    src:url("./font/AveFedan.ttf")format("opentype");
+}
 :root {
     /* Colors - Charte MND */
     /*--color-black: #0F1216;*/
@@ -122,7 +126,7 @@ button {
 }
 
 .section__title {
-    font-family: var(--font-display);
+    font-family: 'avefedan';
     font-size: clamp(2.5rem, 5vw, 4rem);
     line-height: 1.1;
     margin-bottom: var(--spacing-sm);
@@ -4307,16 +4311,17 @@ button {
     font-size: 40px;
     line-height: 1.2;
     letter-spacing: 3px;
+    font-family: 'avefedan';
     margin-bottom: 1.5rem;
     font-weight: 500;
     color: #FFFFFF;
 }
-
 .hero__title--highlight {
     display: block;
     background: linear-gradient(135deg, #F5C400 0%, #EAB308 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    font-family: 'avefedan';
     background-clip: text;
     margin-top: 0.5rem;
 }
